--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.0.0-rc-a99d8e8d-20240916",
-    "react-dom": "19.0.0-rc-a99d8e8d-20240916",
+    "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
+    "react-dom": "^18.3.1",
     "vite": "latest"
   },
   "devDependencies": {
